--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,8 +1,8 @@
 [theme]
 primaryColor="#4F46E5"
-backgroundColor="#FFFFFF"
-secondaryBackgroundColor="#F3F4F6"
-textColor="#1F2937"
+backgroundColor="#000000"
+secondaryBackgroundColor="#1F2937"
+textColor="#FFFFFF"
 font="sans serif"
 
 [server]
